# rag_datadriven

./: .gitignore  README.md  app.py  index.py  query.py  requirements.txt
Evaluation/: evaluation_bert.py  evaluation_l2.py  evaluation_main.py  resume_job_dataset_updated.csv
app/: .gitignore  app.py  index.py  pyproject.toml
app/static/js/: main.js
app/templates/: base.html  index.html  job_detail.html  resume_results.html
static/css/: styles.css
templates/: jobs.html  resume_upload.html
