[project]
name = "rag-datadriven"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "llama-index>=0.12.33",
    "llama-index-vector-stores-faiss>=0.3.0",
    "ollama>=0.4.8",
    "llama-index-vector-stores-chroma>=0.4.1",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-openai>=0.3.38",
    "chromadb>=1.0.6",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "llama-index-llms-ollama>=0.5.4",
    "fastapi[all]>=0.104.0",
    "uvicorn>=0.23.2",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.20",
    "mistralai>=0.0.7",
]
